--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"/>
     <EditText
-        android:id="@+id/edtLoginEmail"
+        android:id="@+id/activity_main_edtEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -34,7 +34,7 @@
         android:textColor="#000000"
         android:ems="10"/>
     <EditText
-        android:id="@+id/edtLoginPassword"
+        android:id="@+id/activity_main_edtPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableRight="@drawable/password"
@@ -47,13 +47,13 @@
         android:hint="Enter password"
         android:inputType="textPassword"/>
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/activity_main_btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
         android:layout_gravity="center_horizontal"/>
     <Button
-        android:id="@+id/btnLoginSignUp"
+        android:id="@+id/activity_main_btnSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up"
