many things are done

--- a/app/src/main/res/layout/activity_fetch_eproducts.xml
+++ b/app/src/main/res/layout/activity_fetch_eproducts.xml
@@ -4,20 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeScreen"
+    tools:context=".FetchEProductsActivity"
     android:orientation="vertical">
 
-
     <TextView
-        android:text="Choose A Brand"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
+        android:id="@+id/txtBrandName"
         android:textSize="30sp"
-        android:textColor="#0000ff"
         android:gravity="center"/>
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/brandsListView"/>
+        android:id="@+id/productsRV"/>
 </LinearLayout>
